Fix issues on Mobile Safari, add favicon link

--- a/public/styles/sections/_footer.scss
+++ b/public/styles/sections/_footer.scss
@@ -1,6 +1,5 @@
 footer {
   position: relative;
-  @include translate3d(0, 0, 0); /* to fix issue with position: fixed and z-index on mobile safari */
   z-index: 3;
   padding: $full-space 0;
 
