--- a/public/styles/sections/_hero_unit.scss
+++ b/public/styles/sections/_hero_unit.scss
@@ -57,10 +57,17 @@ section.hero {
         float: none;
       }
     }
+
+    .tagline {
+      margin-bottom: $full-space;
+    }
+
     .hero-iphones {
-      width: 300px;
-      margin-left: -150px;
-      top: 375px;
+      position: relative;
+      width: 100%;
+      margin: 0;
+      top: auto;
+      left: auto;
     }
   }
 }
